Temporarily disable Continuations::enabled() for platforms which don't have an implementation, yet

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 19
    • Affects Version/s: 19
    • Component/s: hotspot
    • None
    • b25

      "--enable-preview" enables both, Loom and Panama, at the same time. When trying to work on Panama, we run into Loom assertions. This should better be avoided in order to be able to work on both preview features simultaneously.

            Assignee:
            Martin Doerr
            Reporter:
            Martin Doerr
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: