8287437: Temporarily disable Continuations::enabled() for platforms which don't have an implementation, yet