src/hotspot/share/runtime/continuation.cpp
@@ -412,7 +412,11 @@ void Continuations::init() {
 // While virtual threads are in Preview, there are some VM mechanisms we disable if continuations aren't used
 // See NMethodSweeper::do_stack_scanning and nmethod::is_not_on_continuation_stack
 bool Continuations::enabled() {
+#if defined(PPC64) || defined(S390) || defined(RISCV) || defined(ARM32) || defined(IA32)
+  return false;
+#else
   return Arguments::enable_preview();
+#endif
 }
 
 // We initialize the _gc_epoch to 2, because previous_completed_gc_marking_cycle
